Added config file to modify what is tracked.

--- a/ImprovedTracker.csproj
+++ b/ImprovedTracker.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ImprovedTracker.cs"/>
+    <Compile Include="ImprovedTrackerConfig.cs"/>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Build" />
